--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "blogapp": "file:..",
     "dotenv": "^16.4.5",
     "firebase": "^10.8.1",
     "flowbite-react": "^0.7.2",
