--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "blogapp",
+  "name": "mern-blog",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "type": "module",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/index.js",
+    "dev": "nodemon server/index.js",
+    "start": "node server/index.js",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
@@ -15,12 +15,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
-    "cores": "^0.8.5",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.1",
-    "nodemon": "^3.1.0"
+    "mongoose": "^8.0.2",
+    "nodemon": "^3.0.2"
   }
 }
