--- a/api/package.json
+++ b/api/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "build": "npm install && npm install --prefix ../client && npm run build --prefix ../client"
+    "dev": "nodemon index.js",
+    "build":"npm i"
   },
   "keywords": [],
   "author": "",
